Added images for Tor posts and cleaned styling

--- a/static/style.css
+++ b/static/style.css
@@ -1385,7 +1385,7 @@ ol.toc {
   page-break-inside: avoid;
   overflow: hidden;
   break-inside: avoid-column;
-  padding: 0;
+  padding: 16px;
   margin-bottom: 15px;
 }
 .archive-article:before,
